# g.h

./: CMakeLists.txt  Makefile  README.md  gitman.yml  notes  setup.py  vars.mk
.circleci/: config.yml
.github/workflows/: cmake.yml
examples/: 02.net_host.cpp  03.net_client.cpp  04.basic_draw.cpp  0425.sound.cpp  045.basic_model.cpp  046.heightmap.cpp  0465.sdf.cpp  05.offscreen_render.cpp  06.simple_multiplayer_game.cpp  07.voxels.cpp  08.ray_march.cpp  09.gui.cpp  10.text.cpp  11.genetic_agent.cpp  115.genetic_flight_controller.cpp  12.game_objects.cpp  CMakeLists.txt  Makefile  volume_rendering.cpp
examples/data/geo/: plane0.blend
examples/data/shader/: basic_color.fs  basic_color.vs  basic_font.fs  basic_gui.fs  basic_post.vs  basic_texture.fs  debug_normal.fs  depth_only.fs  depth_only.vs  flat_color.fs  planet.vs  planet_color.fs  raymarch.fs  raymarch.vs  shadowed_color.fs
examples/data/tex/: NNSS.tif
examples/data/vox/: probe.vox
examples/gloom/: CMakeLists.txt  main.cpp
examples/gloom/flat/: api.fbs  types.fbs
examples/gloom/flat/commands/: player.fbs
examples/gloom/flat/state/: game.fbs  player.fbs  world.fbs
examples/gloom/inc/: gameplay.hpp  network.hpp  renderers.hpp  state.hpp
inc/: g.ai.h  g.assets.h  g.camera.h  g.dyn.h  g.game.h  g.game.object.h  g.gfx.h  g.h  g.io.h  g.net.h  g.proc.h  g.snd.h  g.ui.h  g.utils.h
inc/data/: marching.cubes.lut
src/: g.assets.cpp  g.camera.cpp  g.core.cpp  g.gfx.api.opengl.cpp  g.gfx.cpp  g.gfx.debug.cpp  g.gfx.effect.cpp  g.gfx.mesh_factory.cpp  g.gfx.primative.cpp  g.gfx.rendering.cpp  g.io.cpp  g.snd.cpp  g.snd.track_factory.cpp  g.ui.cpp
tests/: .test.h  CMakeLists.txt  Makefile  game-object.cpp  ray-plane-intersect.cpp  screen_space_shadows.cpp  thread-pool.cpp  vox-scene.cpp  voxel-hash.cpp
tests/data/: foo.yaml
tests/data/vox/: farm.vox  tree.vox  twofer.vox
